deploy/e2e/threat-scenarios/04-admission-tls/captures/deployment-current.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "7"
  creationTimestamp: "2026-05-12T14:06:20Z"
  generation: 7
  labels:
    app.kubernetes.io/component: admission
    app.kubernetes.io/name: constellation
    constellation.alphabravo.io/cluster: e2e
  name: e2e-admission
  namespace: constellation-system
  ownerReferences:
  - apiVersion: constellation.alphabravo.io/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: ConstellationCluster
    name: e2e
    uid: 4de7c143-784a-4fb3-b420-ea086d8e3ec7
  resourceVersion: "5938"
  uid: 4fe006b1-081d-46ae-a73f-a11e048574fb
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/component: admission
      app.kubernetes.io/name: constellation
      constellation.alphabravo.io/cluster: e2e
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/component: admission
        app.kubernetes.io/name: constellation
        constellation.alphabravo.io/cluster: e2e
    spec:
      containers:
      - env:
        - name: CONSTELLATION_CONTROL_PLANE_URL
          value: http://constellation-api.constellation-system.svc:8080
        - name: CONSTELLATION_ORG_ID
          value: 00000000-0000-0000-0000-000000000000
        image: constellation/admission:e2e
        imagePullPolicy: IfNotPresent
        name: admission
        ports:
        - containerPort: 8443
          name: webhook
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/webhook/certs
          name: tls
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: tls
        secret:
          defaultMode: 420
          secretName: e2e-admission-tls
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-05-12T14:07:48Z"
    lastUpdateTime: "2026-05-12T14:07:48Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-05-12T14:06:20Z"
    lastUpdateTime: "2026-05-12T15:17:47Z"
    message: ReplicaSet "e2e-admission-f745788d4" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 7
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
