deploy/e2e/threat-scenarios/04-admission-tls/captures/kubectl-apply-output.txt
Error from server: error when creating "/tmp/priv-pod-tls.yaml": admission webhook "validate.constellation.alphabravo.io" denied the request: denied by constellation policy "block-privileged": container "c" is privileged
