deploy/e2e/threat-scenarios/04-admission-tls/captures/secret.yaml
apiVersion: v1
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR4ekNDQXErZ0F3SUJBZ0lVU3loek1Dc1R1WmlqdTBEOWhKeUMxZjdjVWlrd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0pURWpNQ0VHQTFVRUF3d2FZMjl1YzNSbGJHeGhkR2x2YmkxaFpHMXBjM05wYjI0dFkyRXdIaGNOTWpZdwpOVEV5TVRVeE5qVTFXaGNOTXpZd05UQTVNVFV4TmpVMVdqQXhNUzh3TFFZRFZRUUREQ1psTW1VdFlXUnRhWE56CmFXOXVMbU52Ym5OMFpXeHNZWFJwYjI0dGMzbHpkR1Z0TG5OMll6Q0NBU0l3RFFZSktvWklodmNOQVFFQkJRQUQKZ2dFUEFEQ0NBUW9DZ2dFQkFLY0p6c2RZRnN1ZlVva1MyWkZrVW4raE82dWVSZUNKS0plTVRPUG5NcTdlQVduMwpRMlFRaGxqWmlhTWZvW [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2QUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktZd2dnU2lBZ0VBQW9JQkFRQ25DYzdIV0JiTG4xS0oKRXRtUlpGSi9vVHVybmtYZ2lTaVhqRXpqNXpLdTNnRnA5ME5rRUlaWTJZbWpINkdhZ1VsVDZCbTh2M3FOcGh3SgorTGM2djJLL09VN0R6cWtaN2VKTld1M0JkempBdjk0ZHMyWFlPYnNFT0xGQlZTTEhWb2tlWnZBV3ZxS0h2dXVlCnlMZFh1N3RrdnJrVFJodWpIUGUxMHE5NEpoNm0wWFpDQkZneW5GR0pmRHlBdXNXL09WbGsxNytBSC9uVVlGRVkKV28xWmY2MnRXQnRJVEFhdjcrTmxvYysvRXRFa2FWM1dTUlYvSFlKY3hMT3RPc292UjZSR0YzZVIrbmVQb2JwdQpmS0F3N0tlTDMvMk1id [...]
kind: Secret
metadata:
  name: e2e-admission-tls
  namespace: constellation-system
type: kubernetes.io/tls
