deploy/e2e/threat-scenarios/04-admission-tls/captures/validatingwebhookconfig.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: constellation-admission
  labels:
    constellation.alphabravo.io/cluster: e2e
webhooks:
  - name: validate.constellation.alphabravo.io
    admissionReviewVersions: ["v1"]
    sideEffects: None
    failurePolicy: Ignore
    timeoutSeconds: 5
    namespaceSelector:
      matchExpressions:
        - {key: "kubernetes.io/metadata.name", operator: NotIn, values: ["kube-system","constellation-system","kube-public","kube-node-lease"]}
        - {key: "constellation.alphabravo.io/admission", operator: NotIn, values: ["skip"]}
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods","replicationcontrollers","persistentvolumeclaims"]
        operations: ["CREATE","UPDATE"]
        scope: Namespaced
      - apiGroups: ["apps"]
        apiVersions: ["v1"]
        resources: ["deployments","statefulsets","daemonsets","replicasets"]
        operations: ["CREATE","UPDATE"]
        scope: Namespaced
      - apiGroups: ["batch"]
        apiVersions: ["v1"]
        resources: ["jobs","cronjobs"]
        operations: ["CREATE","UPDATE"]
        scope: Namespaced
    clientConfig:
      service:
        name: e2e-admission
        namespace: constellation-system
        path: /validate
        port: 443
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURLekNDQWhPZ0F3SUJBZ0lVVFZkNlU2dUVGbjJFWEpJQWpCT3NIZFJZVXNvd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0pURWpNQ0VHQTFVRUF3d2FZMjl1YzNSbGJHeGhkR2x2YmkxaFpHMXBjM05wYjI0dFkyRXdIaGNOTWpZdwpOVEV5TVRVeE5qTTNXaGNOTXpZd05UQTVNVFV4TmpNM1dqQWxNU013SVFZRFZRUUREQnBqYjI1emRHVnNiR0YwCmFXOXVMV0ZrYldsemMybHZiaTFqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUIKQU1Edm14dk1icXdDdy9xbDVScEdJU0dKTEdOTEdGOGJDbGkwY2g3ck9IVXF4b3pNbFFqRDFuRm5leW81VUNpNwplRkFLL0ZIVlAz [...]
