deploy/e2e/threat-scenarios/04-admission-tls/captures/vwc-current.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"admissionregistration.k8s.io/v1","kind":"ValidatingWebhookConfiguration","metadata":{"annotations":{},"labels":{"constellation.alphabravo.io/cluster":"e2e"},"name":"constellation-admission"},"webhooks":[{"admissionReviewVersions":["v1"],"clientConfig":{"caBundle":"LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURLekNDQWhPZ0F3SUJBZ0lVVFZkNlU2dUVGbjJFWEpJQWpCT3NIZFJZVXNvd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0pURWpNQ0VHQTFVRUF3d2FZMjl1YzNSbGJHeGhkR2x2YmkxaFpHMXBjM05wYjI0dFkyRXdIaGNOTWpZdwpOVE [...]
  creationTimestamp: "2026-05-12T15:17:05Z"
  generation: 1
  labels:
    constellation.alphabravo.io/cluster: e2e
  name: constellation-admission
  resourceVersion: "5808"
  uid: 8da6646d-1180-4ae9-852c-1f78b01d82bc
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURLekNDQWhPZ0F3SUJBZ0lVVFZkNlU2dUVGbjJFWEpJQWpCT3NIZFJZVXNvd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0pURWpNQ0VHQTFVRUF3d2FZMjl1YzNSbGJHeGhkR2x2YmkxaFpHMXBjM05wYjI0dFkyRXdIaGNOTWpZdwpOVEV5TVRVeE5qTTNXaGNOTXpZd05UQTVNVFV4TmpNM1dqQWxNU013SVFZRFZRUUREQnBqYjI1emRHVnNiR0YwCmFXOXVMV0ZrYldsemMybHZiaTFqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUIKQU1Edm14dk1icXdDdy9xbDVScEdJU0dKTEdOTEdGOGJDbGkwY2g3ck9IVXF4b3pNbFFqRDFuRm5leW81VUNpNwplRkFLL0ZIVlAzSW [...]
    service:
      name: e2e-admission
      namespace: constellation-system
      path: /validate
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: validate.constellation.alphabravo.io
  namespaceSelector:
    matchExpressions:
    - key: kubernetes.io/metadata.name
      operator: NotIn
      values:
      - kube-system
      - constellation-system
      - kube-public
      - kube-node-lease
    - key: constellation.alphabravo.io/admission
      operator: NotIn
      values:
      - skip
  objectSelector: {}
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - pods
    - replicationcontrollers
    - persistentvolumeclaims
    scope: Namespaced
  - apiGroups:
    - apps
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - deployments
    - statefulsets
    - daemonsets
    - replicasets
    scope: Namespaced
  - apiGroups:
    - batch
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - jobs
    - cronjobs
    scope: Namespaced
  sideEffects: None
  timeoutSeconds: 5
