deploy/e2e/threat-scenarios/04-admission-tls/captures/vwc-describe.txt
Name:         constellation-admission
Namespace:    
Labels:       constellation.alphabravo.io/cluster=e2e
Annotations:  <none>
API Version:  admissionregistration.k8s.io/v1
Kind:         ValidatingWebhookConfiguration
Metadata:
  Creation Timestamp:  2026-05-12T15:17:05Z
  Generation:          1
  Resource Version:    5808
  UID:                 8da6646d-1180-4ae9-852c-1f78b01d82bc
Webhooks:
  Admission Review Versions:
    v1
  Client Config:
    Ca Bundle:  LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURLekNDQWhPZ0F3SUJBZ0lVVFZkNlU2dUVGbjJFWEpJQWpCT3NIZFJZVXNvd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0pURWpNQ0VHQTFVRUF3d2FZMjl1YzNSbGJHeGhkR2x2YmkxaFpHMXBjM05wYjI0dFkyRXdIaGNOTWpZdwpOVEV5TVRVeE5qTTNXaGNOTXpZd05UQTVNVFV4TmpNM1dqQWxNU013SVFZRFZRUUREQnBqYjI1emRHVnNiR0YwCmFXOXVMV0ZrYldsemMybHZiaTFqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUIKQU1Edm14dk1icXdDdy9xbDVScEdJU0dKTEdOTEdGOGJDbGkwY2g3ck9IVXF4b3pNbFFqRDFuRm5leW81VUNpNwplRkFLL0ZIVlAz [...]
    Service:
      Name:        e2e-admission
      Namespace:   constellation-system
      Path:        /validate
      Port:        443
  Failure Policy:  Ignore
  Match Policy:    Equivalent
  Name:            validate.constellation.alphabravo.io
  Namespace Selector:
    Match Expressions:
      Key:       kubernetes.io/metadata.name
      Operator:  NotIn
      Values:
        kube-system
        constellation-system
        kube-public
        kube-node-lease
      Key:       constellation.alphabravo.io/admission
      Operator:  NotIn
      Values:
        skip
  Object Selector:
  Rules:
    API Groups:
      
    API Versions:
      v1
    Operations:
      CREATE
      UPDATE
    Resources:
      pods
    Scope:          Namespaced
  Side Effects:     None
